--- a/slider/standard.html
+++ b/slider/standard.html
@@ -93,7 +93,7 @@
         </div>
         <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:980px;height:150px;overflow:hidden;">
             <div>
-                <img data-u="image" src="https://legalup.com.pe/tramites_01.jpg?v=2" />
+                <h1>hola</h1>
             </div>
             <div>
                 <img data-u="image" src="img/005.jpg" />
@@ -127,7 +127,7 @@
             </div>
             <div>
                 <img data-u="image" src="img/027.jpg" />
-            </div><a data-u="any" href="https://www.jssor.com" style="display:none">web animation composer</a>
+            </div><a data-u="any" href="https://www.jssor.com" style="display:">web animation composer</a>
         </div>
         <!-- Bullet Navigator -->
         <div data-u="navigator" class="jssorb057" style="position:absolute;bottom:12px;right:12px;" data-autocenter="1" data-scale="0.5" data-scale-bottom="0.75">
